# AI_Exam_Prep_Buddy

./: README.md  pyproject.toml  report.md  requirements.txt
BCSE302L/: insights.md  mock_qp_1.md  mock_qp_2.md  mock_qp_3.md  schedule.md
output_notes/: extracted_text_chunks.txt  notes.md
src/exam_prep_buddy/: crew.py  main.py
src/exam_prep_buddy/config/: agents.yaml  tasks.yaml
src/exam_prep_buddy/tools/: categorize_utils.py  docx_utils.py  file_utils.py  material_utils.py  multimodal_tool.py  pdf_utils.py  pptx_utils.py  pyq_scraper.py
