[project]
name = "exam_prep_buddy"
version = "0.1.0"
description = "exam_prep_buddy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
exam_prep_buddy = "exam_prep_buddy.main:run"
run_crew = "exam_prep_buddy.main:run"
train = "exam_prep_buddy.main:train"
replay = "exam_prep_buddy.main:replay"
test = "exam_prep_buddy.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
